# Bunin-s-four-friends

./: .gitignore  README.md
back/: CMakeLists.txt  main.cpp
back/lib/boost_1_85_0/bin.v2/: project-cache.jam
back/lib/boost_1_85_0/stage/lib/cmake/boost_context-1.85.0/: boost_context-config.cmake
back/lib/boost_1_85_0/stage/lib/cmake/boost_contract-1.85.0/: boost_contract-config.cmake
back/lib/boost_1_85_0/stage/lib/cmake/boost_date_time-1.85.0/: boost_date_time-config.cmake
back/lib/boost_1_85_0/stage/lib/cmake/boost_exception-1.85.0/: boost_exception-config.cmake
back/lib/boost_1_85_0/stage/lib/cmake/boost_graph-1.85.0/: boost_graph-config.cmake
back/lib/boost_1_85_0/stage/lib/cmake/boost_graph_parallel-1.85.0/: boost_graph_parallel-config.cmake
back/lib/boost_1_85_0/stage/lib/cmake/boost_headers-1.85.0/: boost_headers-config.cmake
back/lib/boost_1_85_0/stage/lib/cmake/boost_numpy-1.85.0/: boost_numpy-config.cmake
back/lib/boost_1_85_0/stage/lib/cmake/boost_prg_exec_monitor-1.85.0/: boost_prg_exec_monitor-config.cmake
back/lib/boost_1_85_0/stage/lib/cmake/boost_program_options-1.85.0/: boost_program_options-config.cmake
back/lib/boost_1_85_0/stage/lib/cmake/boost_python-1.85.0/: boost_python-config.cmake
back/lib/boost_1_85_0/stage/lib/cmake/boost_random-1.85.0/: boost_random-config.cmake
back/lib/boost_1_85_0/stage/lib/cmake/boost_regex-1.85.0/: boost_regex-config.cmake
back/lib/boost_1_85_0/stage/lib/cmake/boost_serialization-1.85.0/: boost_serialization-config.cmake
(+3 files in other folders)
